K8s/backend.yaml
# ==========================================
# 1. DJANGO BACKEND (DAPHNE)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: django
        image: 277436022464.dkr.ecr.ap-south-1.amazonaws.com/hireflow-backend:latest
        command: ["daphne", "-b", "0.0.0.0", "-p", "8000", "hireflow_main.asgi:application"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
# ==========================================
# 2. CELERY WORKER
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: worker
        image: 277436022464.dkr.ecr.ap-south-1.amazonaws.com/hireflow-backend:latest
        command: ["celery", "-A", "hireflow_main", "worker", "--loglevel=info"]
---
# ==========================================
# 3. CELERY BEAT (SCHEDULER)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1 # ALWAYS keep this at 1 to avoid duplicate tasks
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
      - name: beat
        image: 277436022464.dkr.ecr.ap-south-1.amazonaws.com/hireflow-backend:latest
        command: ["celery", "-A", "hireflow_main", "beat", "--loglevel=info"]
