K8s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: my-grafana.monitoring.svc.cluster.local
