K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hireflow-combined-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    # SSL Configuration
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:277436022464:certificate/cb865750-0315-427d-8072-3fa705271670
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # Global Health Check (For Backend)
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health/
    
    # --- AI SERVICE HEALTH CHECK ---
    # Updated to your requested path
    alb.ingress.kubernetes.io/healthcheck-path.ai-service: /api/ai/health/
    alb.ingress.kubernetes.io/success-codes.ai-service: '200'
    
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200'
    
    # Reducing this temporarily from 300 to 30 is highly recommended 
    # so you don't have to wait 5 minutes to see if it works.
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '300'
    
    # --- N8N HEALTH CHECK ---
    alb.ingress.kubernetes.io/success-codes.n8n: '200-499'
    alb.ingress.kubernetes.io/healthcheck-path.n8n: /
    
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600

spec:
  ingressClassName: alb
  rules:
    - host: api.hire-flow.online
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /api/ai/
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8002
    
    - host: n8n.hire-flow.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
